<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            app:cardCornerRadius="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/yourBmiTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/your_bmi_value_text"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/bmiValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/bmi_value"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/yourBmiTextView" />

                <TextView
                    android:id="@+id/bmiTextTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/bmi_text"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bmiValueTextView" />

                <TextView
                    android:id="@+id/bmiDescTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/des_healthy"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bmiTextTextView"
                    android:layout_margin="16dp"
                    android:textColor="@color/white"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="24dp"
            android:foreground="?android:selectableItemBackground"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/card3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/user_name"
                    android:textColor="@color/orange_700"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/age_text"
                    android:textStyle="bold"
                    android:textColor="@color/orange_700"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/ageValueTextView"
                    app:layout_constraintBottom_toBottomOf="@id/ageValueTextView"/>

                <TextView
                    android:id="@+id/ageValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/age_value_text"
                    android:textStyle="bold"
                    android:textColor="@color/orange_500"
                    app:layout_constraintStart_toStartOf="@id/weightValueTextView"
                    app:layout_constraintTop_toBottomOf="@id/nameTextView" />

                <TextView
                    android:id="@+id/weightTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/weight_text"
                    android:textStyle="bold"
                    android:textColor="@color/orange_700"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/weightValueTextView"
                    app:layout_constraintBottom_toBottomOf="@id/weightValueTextView"/>

                <TextView
                    android:id="@+id/weightValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/weight_value"
                    android:textStyle="bold"
                    android:textColor="@color/orange_500"
                    app:layout_constraintStart_toEndOf="@id/weightTextView"
                    app:layout_constraintTop_toBottomOf="@id/ageValueTextView" />

                <TextView
                    android:id="@+id/heightTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/height_text"
                    android:textStyle="bold"
                    android:textColor="@color/orange_700"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/heightValueTextView"
                    app:layout_constraintBottom_toBottomOf="@id/heightValueTextView"/>

                <TextView
                    android:id="@+id/heightValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/height_value"
                    android:textStyle="bold"
                    android:textColor="@color/orange_500"
                    app:layout_constraintStart_toStartOf="@id/weightValueTextView"
                    app:layout_constraintTop_toBottomOf="@id/weightValueTextView" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/heightTextView"
                    android:text="@string/tap_to_change"
                    android:textAlignment="center" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="24dp"
            android:foreground="?android:selectableItemBackground"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintStart_toEndOf="@id/card2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/card2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/bmiRangeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/underweight_bmi_range"
                    android:textColor="@color/blue_500"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textAllCaps="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/bmiRangeProgressBar"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:progressDrawable="@drawable/bmi_range_progressbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card1"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="36dp"
            android:indeterminate="false"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text2"
            app:layout_constraintTop_toBottomOf="@id/bmiRangeProgressBar"
            android:layout_marginTop="2dp"
            android:text="@string/_18_5" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/text1"
            app:layout_constraintEnd_toStartOf="@id/text3"
            app:layout_constraintTop_toBottomOf="@id/bmiRangeProgressBar"
            android:layout_marginTop="2dp"
            android:text="@string/_25_0" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/text2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bmiRangeProgressBar"
            android:layout_marginTop="2dp"
            android:text="@string/_30_0" />

        <TextView
            android:id="@+id/weightRangeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text3"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:text="@string/text_healthy_weight_range"
            android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>